[build-system]
requires = ["setuptools"]

[project]
name = "verilog_axis"
version = "1.0.0"
description = "verilog-axis packaged for tsfpga and with VHDL components declaration."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "COPYING"}
dependencies = [
    "tsfpga",
]
[tool.setuptools.packages]
find = {}
